--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="contenedor" id="AbrirContenedor">
       <div class="superior"></div>
-      <div class="mensaje">Gracias por este año juntos, por mostrarme lo lindo que es estar contigo y mostrarme amor siempre, apoyarme cada que te necesito y estar conmigo siempre, te amo mucho mi morenita.<p>Dilan.</p></div>
+      <div class="mensaje">gracias por este año junto a ti y hacerme sentir amado mi morenitalinda, te amo.<p>Dilan.</p></div>
       <div class="carta">
         <i class="bx bxs-heart"></i>
       </div>
